--- a/icons.html
+++ b/icons.html
@@ -4,56 +4,78 @@
     <link rel="stylesheet" href="css/main.css">
 
     <style>
-        main{
+        main {
             margin: 3em;
             padding: 1em;
             border: solid 1px #EEE;
         }
-        .box{display: inline-block;
-        border:solid 1px #EEE;
-        padding: 1em;
+
+        .box {
+            display: inline-block;
+            border: solid 1px #EEE;
+            padding: 1em;
             margin: 1em;
-            text-align:center;
+            text-align: center;
         }
-        .label{
-            display:block;
-            text-align:center;
+
+        .label {
+            display: block;
+            text-align: center;
         }
-        .box i{font-size: 3em;}
-        header{text-align:center;}
+
+        .box i {
+            font-size: 3em;
+        }
+
+        header {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <header><h1>Icons</h1></header>
-   <main>
-       <span class="box"><i class="icon-home"></i><span class="label">icon-home<br/>
+<header><h1>Icons</h1></header>
+<main>
+       <span class="box">
+              <i class="icon-home"></i>
+              <span class="label">icon-home<br/>
        "\e900"
        </span></span>
-       <span class="box"><i class="icon-pencil"></i><span class="label">icon-pencil<br/>
+       <span class="box">
+              <i class="icon-pencil"></i>
+              <span class="label">icon-pencil<br/>
        "\e901"
        </span></span>
-       <span class="box"><i class="icon-pencil2"></i><span class="label">icon-pencil2<br/>
+       <span class="box">
+              <i class="icon-pencil2"></i>
+              <span class="label">icon-pencil2<br/>
        "\e902"
        </span></span>
-       <span class="box"><i class="icon-eyedropper"></i><span class="label">icon-eyedropper<br/>
+       <span class="box">
+              <i class="icon-eyedropper"></i><span class="label">icon-eyedropper<br/>
        "\e903"
        </span></span>
-       <span class="box"><i class="icon-droplet"></i><span class="label">icon-droplet<br/>
+       <span class="box">
+              <i class="icon-droplet"></i><span class="label">icon-droplet<br/>
        "\e904"
        </span></span>
-       <span class="box"><i class="icon-image"></i><span class="label">icon-image<br/>
+       <span class="box">
+              <i class="icon-image"></i><span class="label">icon-image<br/>
        "\e905"
        </span></span>
        <span class="box"><i class="icon-images"></i><span class="label">icon-images<br/>
        "\e906"
        </span></span>
-       <span class="box"><i class="icon-camera"></i><span class="label">icon-camera<br/>
+       <span class="box">
+              <i class="icon-camera"></i><span class="label">icon-camera<br/>
        "\e907"
        </span></span>
-       <span class="box"><i class="icon-file-text"></i><span class="label">icon-file-text<br/>
+       <span class="box">
+              <i class="icon-file-text"></i><span class="label">icon-file-text<br/>
        "\e908"
        </span></span>
-       <span class="box"><i class="icon-file-empty"></i><span class="label">icon-file-empty<br/>
+       <span class="box">
+              <i class="icon-file-empty"></i>
+              <span class="label">icon-file-empty<br/>
        "\e909"
        </span></span>
        <span class="box"><i class="icon-files-empty"></i><span class="label">icon-files-empty<br/>
@@ -448,7 +470,7 @@
        </span></span>
 
 
-   </main>
-    
+</main>
+
 </body>
 </html>
