--- a/index.html
+++ b/index.html
@@ -32,50 +32,65 @@
         <div class="photo-widget_toolbar">
             <div class="photo-widget_tabs">
                 <div class="photo-widget_tab">
+
                     <button id="toolSwitchScale" value="controlSetScale" title="Scale Image"
                             class="module_control_group-tool_switch">
                         <i class="icon-shrink"></i>
+                        <span class="module_control_group-tool_switch-label">Scale</span>
                     </button>
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchCrop" value="controlSetCrop" title="Crop Image"
                             class="module_control_group-tool_switch">
                         <i class="icon-crop"></i>
+                        <span class="module_control_group-tool_switch-label">Crop</span>
+
                     </button>
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchHistory" value="controlSetHistory" title="Image History"
                             class="module_control_group-tool_switch">
                         <i class="icon-history"></i>
+                        <span class="module_control_group-tool_switch-label">History</span>
+
                     </button>
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchRotate" value="controlSetRotate" title="Rotate Image"
                             class="module_control_group-tool_switch">
                         <i class="icon-spinner11"></i>
+                        <span class="module_control_group-tool_switch-label">Rotate</span>
                     </button>
+
+
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchSave" value="controlSetSave" title="Save Image"
                             class="module_control_group-tool_switch">
                         <i class="icon-floppy-disk"></i>
+                        <span class="module_control_group-tool_switch-label">Save</span>
+
                     </button>
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchClear" value="controlSetClear" title="Start Over"
                             class="module_control_group-tool_switch">
                         <i class="icon-cancel-circle"></i>
+                        <span class="module_control_group-tool_switch-label">Clear</span>
+
                     </button>
                 </div>
                 <div class="photo-widget_tab">
                     <button id="toolSwitchZoom" value="controlSetZoom" title="Zoom Image"
                             class="module_control_group-tool_switch">
                         <i class="icon-zoom-in"></i>
+                        <span class="module_control_group-tool_switch-label">Zoom</span>
+
                     </button>
                 </div>
             </div>
             <div class="photo-widget_tab-panels">
-                <div id="controlSetScale" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetScale" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
@@ -103,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetCrop" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetCrop" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
 
@@ -118,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetHistory" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetHistory" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
@@ -138,7 +153,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetRotate" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetRotate" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
@@ -164,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetSave" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetSave" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
@@ -176,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetClear" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetClear" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
@@ -188,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="controlSetZoom" class="photo-widget_control-group module_control_group is-closed">
+                <div id="controlSetZoom" class="photo-widget_control-group module_control_group">
                     <div class="module_control_group-container">
 
                         <div class="module_control_group-tool_group_container">
