--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             height: 100vh;
             width: 100vw;
             padding: 2em;
-            background-color: orangered;
+            background-color: black;
             overflow: hidden;
             box-sizing: border-box;
         }
